IN DEVELEPMENT ======= 1.2.8

- added: debugging.js
- added: framework.stats.timeout
- added: template supports rendering of other templates or views
- added: referer flag
- added: Number.prototype.VAT
- added: Number.prototype.discount
- added: utils.sendfile(filename, url, [callback], [headers], [name])
- added: framework.isProcessed()

- updated: NoSQL v2.0.0
- updated: builders.schema(), builders.defaults()

- fixed: framework.stats
- fixed: @{user}
- fixed: FrameworkRestrictions
- fixed: template ' character
- fixed: utils.Async - onComplete calling
- fixed: stability

======= 1.2.7-1

- added: framework.stats.request.delete
- added: framework.stats.request.put
- added: framework.stats.request.blocked
- added: framework.stats.request.pending
- added: framework.stats.response.forwarding (host redirecting)
- added: controller.run() - to run async tasks

- updated: complete rewrited markdown parser (more than 50% better performance)
- updated: complete rewrited markdown example
- updated: framework.usage informations

- fixed: request.hostname()
- fixed: builders.schema (default declaration)

======= 1.2.7

- added: definitions
- added: framework.restrictions class
- added: framework.async class
- added: framework.injectConfig()
- added: framework.injectDefinition()
- added: framework.injectController()
- added: framework.eval()
- added: framework.response501() and controller.view501() - 501 Not Implemented
- added: framework.redirect(oldHost, newHost, withPath, permament)
- added: new example https://github.com/petersirka/partial.js/tree/master/examples/redirect-host
- added: new example https://github.com/petersirka/partial.js/tree/master/examples/scheduler
- added: new example https://github.com/petersirka/partial.js/tree/master/examples/framework-async
- added: new example https://github.com/petersirka/partial.js/tree/master/examples/framework-eval
- added: new example https://github.com/petersirka/partial.js/tree/master/examples/framework-inject-module